# arcraven.ugv.core

./: CMakeLists.txt  README.md  main.cpp
command/: CommandRouter.cpp  CommandRouter.hpp  CommandTypes.hpp
config/: UgvConfig.hpp  UgvCore.cpp  UgvCore.hpp
core/: EStopLatch.hpp  Rate.hpp  StateStore.cpp  StateStore.hpp  StopController.hpp
models/enums/: CommandAuthority.hpp  CommandDomain.hpp  CommandPriority.hpp  CommandStatus.hpp  RejectReason.hpp  UgvCommand.hpp
rust/: Cargo.toml
rust/ugv_api/: Cargo.toml
rust/ugv_api/src/: lib.rs
rust/ugv_api/src/api/: mod.rs  ugv_api.rs
rust/ugv_api/src/commands/: command_authority.rs  command_domain.rs  command_envelope.rs  command_priority.rs  command_result.rs  command_result_event.rs  command_status.rs  enums.rs  mod.rs  reject_reason.rs  ugv_command.rs
rust/ugv_api/src/sensors/: mod.rs  sensor_descriptor.rs  sensor_field.rs  sensor_frame.rs  sensor_payload.rs  sensor_reading.rs
rust/ugv_api/src/telemetry/: joint_state.rs  mod.rs  telemetry_frame.rs
rust/ugv_api/src/transport/: iceoryx2_transport.rs  mod.rs  transport.rs
subsystems/: Iceoryx2Bridge.cpp  Iceoryx2Bridge.hpp  Interfaces.hpp  Stubs.hpp
utils/: Base64.cpp  Base64.hpp  Logger.cpp  Logger.hpp
